fix gap between tile rows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,7 @@ main {
 }
 #tiles {
     text-align: center;
+    line-height:0;
 }
 .tile-front > img, .tile-back > img {
     width:  var(--tile-normal-side);
@@ -134,6 +135,8 @@ main {
     display: inline-block;
     width: var(--tile-normal-side);
     height: var(--tile-normal-side);
+    line-height: 1rem;
+    margin: 2px;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
   
@@ -151,6 +154,7 @@ main {
     position: absolute;
     text-align: center;
     width: 100%;
+    height: 100%;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
 }
